Fix: add missing sku and overflow footer

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -277,6 +277,7 @@ nav.navbar.is-justify-content-space-evenly {
 
 .tabs {
     white-space: normal;
+    overflow-x: hidden;
 }
 
 .tabs a:hover {
